--- a/SkilEx/Helper/en.lproj/Localizable.strings
+++ b/SkilEx/Helper/en.lproj/Localizable.strings
@@ -251,3 +251,6 @@
 
 /*SkilexWallet text */
 "SkilexWalletnavtitle_text" = "SkilEx Wallet";
+
+/*ReviewsAndratings text */
+"reviewAndRatingsnavtitle_text" = "Reviews and Ratings";
